--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,14 @@
 .spinner{
   font-size: 140px;
+  animation: spin 2s linear infinite;
 }
+
+
+@keyframes spin {
+  0% { transform: rotate(0); }
+  100% { transform: rotate(1turn); }
+}
+
 .spinner:after {
   content: '◌';
 }
